# TradingLab

./: README.md  pyproject.toml
dokumentacja/architektura/: ARCHITEKTURA.md  DATA_ENGINE.md  DATA_ENGINE_IMPLEMENTACJA_V0_2.md  DEV_AGENT_CONTRACT.md  KONSTYTUCJA.md  TRADINGLAB_VISION.md
dokumentacja/badania/: PROCES_BADAWCZY.md
dokumentacja/decyzje/: ADR-0001-fundamenty-projektu.md  ADR-0002-narzedzia-testow-i-jakosci-kodu.md  ADR-0003-data-engine-v0-2-implementacja.md
dokumentacja/mapa_drogowa/: ROADMAP.md
dokumentacja/procesy/: DEV_AGENT_OBSERWACJE.md  DEV_AGENT_SCENARIUSZE.md  PRACA_NA_WIELU_KOMPUTERACH.md  PRACA_Z_ASYSTENTEM.md
scripts/: create_sample_dataset.py
src/tradinglab/: main.py
src/tradinglab/data_engine/: __init__.py  data_file.py  dataset_builder.py  dataset_id.py  engine.py  metadata.py  models.py  ohlcv_validation.py  sample_dataset.py  status.py  storage.py  validation_report.py
src/tradinglab/data_engine/connectors/: __init__.py  base.py  polygon_forex.py
src/tradinglab/dev_agent/: __init__.py  procedural_decision.py
tests/: test_smoke.py
tests/data_engine/: test_create_sample_dataset_script.py  test_data_file.py  test_dataset_build_result_model.py  test_dataset_builder.py  test_dataset_id.py  test_engine.py  test_metadata.py  test_models.py  test_ohlcv_bar_model.py  test_ohlcv_validation.py  test_polygon_forex_normalization.py  test_provider_connector_contract.py  test_sample_dataset.py  test_status.py  test_storage.py  test_validation_report.py  test_validation_report_model.py
tests/dev_agent/: test_procedural_decision.py
