[project]
name = "tradinglab"
version = "0.2.0"
description = "Research and engineering platform for developing, validating, and eventually executing trading strategies."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
